Added timing, introduced var, and reduced scope where possible, mio=nor code enhancements